model-catalog-backend/configs/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: model-catalog
  labels:
    name: model-catalog
